# Baud

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TASK-TRACKER.md  genesis.json  start-node.bat
.github/workflows/: ci.yml  publish-docker.yml  publish-npm.yml  publish-pypi.yml
crates/baud-api/: Cargo.toml  dashboard.html
crates/baud-api/src/: lib.rs  routes.rs
crates/baud-cli/: Cargo.toml
crates/baud-cli/src/: main.rs
crates/baud-consensus/: Cargo.toml
crates/baud-consensus/src/: engine.rs  lib.rs
crates/baud-core/: Cargo.toml
crates/baud-core/benches/: stress.rs
crates/baud-core/src/: crypto.rs  error.rs  lib.rs  mempool.rs  state.rs  types.rs
crates/baud-core/tests/: integration_test.rs
crates/baud-network/: Cargo.toml
crates/baud-network/src/: lib.rs  peer.rs
crates/baud-node/: Cargo.toml
crates/baud-node/src/: main.rs
crates/baud-storage/: Cargo.toml
crates/baud-storage/src/: lib.rs  store.rs
crates/baud-wallet/: Cargo.toml
crates/baud-wallet/src/: lib.rs  wallet.rs
docs/: download.html  explorer.html  faq.html  index.html  install.ps1  install.sh  whitepaper.md
examples/: autonomous_agent.py  crewai_team.py  demo_agent.py  langchain_agent.py
mcp-server/: README.md  index.js  package-lock.json  package.json
scripts/: gen_ico.py  testnet.ps1
sdk/python/: README.md  pyproject.toml
sdk/python/baud_sdk/: __init__.py  client.py  constants.py  keys.py  pay.py  signing.py  transactions.py
