[package]
name = "baud-api"
version.workspace = true
edition.workspace = true
description = "REST API server for autonomous agent interaction with the Baud ledger"

[dependencies]
baud-core.workspace = true
baud-consensus.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
hex.workspace = true
