[package]
name = "baud-consensus"
version.workspace = true
edition.workspace = true
description = "BFT consensus engine for the Baud M2M ledger"

[dependencies]
baud-core.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
rand.workspace = true
dashmap.workspace = true
