[package]
name = "baud-core"
version.workspace = true
edition.workspace = true
description = "Core primitives, cryptography, state machine, and escrow for the Baud M2M ledger"

[dependencies]
ed25519-dalek.workspace = true
blake3.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
thiserror.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
