[package]
name = "baud-node"
version.workspace = true
edition.workspace = true
description = "Full node binary for the Baud M2M ledger"

[[bin]]
name = "baud-node"
path = "src/main.rs"

[dependencies]
baud-core.workspace = true
baud-consensus.workspace = true
baud-network.workspace = true
baud-api.workspace = true
baud-storage.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
futures-util.workspace = true
axum.workspace = true
