[package]
name = "baud-storage"
version.workspace = true
edition.workspace = true
description = "Persistent storage layer for the Baud M2M ledger (RocksDB)"

[dependencies]
baud-core.workspace = true
sled.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tracing.workspace = true
thiserror.workspace = true
