[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baud-sdk"
version = "0.1.0"
description = "Python SDK for the Baud M2M Agent Ledger"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Baud Contributors" }]
keywords = ["baud", "cryptocurrency", "ai-agents", "m2m", "ledger"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/NullNaveen/Baud"
Repository = "https://github.com/NullNaveen/Baud"
Issues = "https://github.com/NullNaveen/Baud/issues"
